Fixed overlap of form onto footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,7 +345,7 @@ main {
 
     #signup-form {
         max-width: 400px;
-        position: absolute;
+        /* position: absolute; */
         left: 10%;
         top: 150px;
     }
